--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,16 @@ dependencies:
   http: ^0.13.3
   provider: ^5.0.0
   intl: ^0.17.0
+  flutter_launcher_icons: ^0.9.0
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+flutter_icons:
+   android: "launcher_icon"
+   ios: true
+   image_path: "assets/logo.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
